Mon Jun  2 07:05:59 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/encoding.h: constify `rb_encoding` arguments.

	* include/ruby/oniguruma.h: constify `OnigEncoding` arguments.

Sun Jun  1 12:05:10 2014  Tanaka Akira  <akr@fsij.org>

	* test/drb: Wrap tests definitions by DRbTests module.  This makes
	  several tests (ACLEntryTest, TestBug4409, etc.) easier to understand
	  that they are tests for DRb.

Sun Jun  1 11:36:25 2014  Tanaka Akira  <akr@fsij.org>

	* lib/rinda/ring.rb (RingFinger#make_socket): Close the socket on
	  exception.

Sun Jun  1 06:55:26 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (intern_str): dynamic attrset ID is registered by
	  `rb_id_attrset()` already, so no further registration is needed.
	  [ruby-core:62861]

Sun Jun  1 04:52:47 2014  Zachary Scott  <e@zzak.io>

	* lib/English.rb: [DOC] $LOADED_FEATURES moved to load.c [Fixes GH-620]
	  Patch submitted by @leafac in https://github.com/ruby/ruby/pull/620
	* doc/globals.rdoc: Added $LOADED_FEATURES to list

Sat May 31 22:30:14 2014  Tanaka Akira  <akr@fsij.org>

	* test/lib/leakchecker.rb: Leak checker extracted from
	  test/lib/minitest/unit.rb.

Sat May 31 21:15:43 2014  URABE Shyouhei  <shyouhei@ruby-lang.org>

	* thread.c (rb_thread_atfork_internal): My compiler complains
	  about this variable being used before initialized. I looked at
	  the code and expanded the macro and turned out it was actually
	  USED for pointer arithmetic, not dereferenced.  So this was
	  never a serious bug.  But is annoying indeed to see warnings
	  every time.  I added `=0` and all went healthy.

	* configure.in: Also, I found that the problematic macro expansion
	  only happens when we lack __typeof__ C extension, which shall
	  not be the case of my compiler.  I added AC_CTYPEOF to kick ass.

Sat May 31 16:32:50 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/ipaddr.rb: extracted inline tests into test dir.
	* test/test_ipaddr.rb: ditto.
